syntax = "proto3";

option csharp_namespace = "SampleGrpc";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetTable(google.protobuf.Empty) returns (stream TableRespnse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message TableRespnse{
	 google.protobuf.Timestamp timestamp=1;
	int32 num=2;
}
